feature：优化包结构、开发core准备过程

--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.4",
   "description": "zelda-cli-dev core",
   "author": "fantienan <363982607@qq.com>",
+  "repository": "",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/core.js",
+  "main": "lib/index.js",
   "bin": {
     "zelda-cli-dev": "bin/index.js"
   },
@@ -22,5 +23,16 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "gitHead": "a5be675e4fc03f50a9157c01d159e0c1e6120933"
+  "gitHead": "a5be675e4fc03f50a9157c01d159e0c1e6120933",
+  "dependencies": {
+    "@zelda-cli-dev/log": "file:../../utils/log",
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "exists": "^1.0.1",
+    "import-local": "^3.0.2",
+    "minimist": "^1.2.5",
+    "root-check": "^1.0.0",
+    "semver": "^7.3.4",
+    "user-home": "^2.0.0"
+  }
 }
