--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "zelda-cli-dev"
+    "start": "node .\\core\\cli\\bin\\index.js"
   },
   "keywords": [],
   "author": "",
