feature：添加注册命令、动态加载init包、添加formatPath包

--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -27,12 +27,13 @@
   "dependencies": {
     "@zelda-cli-dev/get-npm-info": "file:../../utils/get-npm-info",
     "@zelda-cli-dev/log": "file:../../utils/log",
+    "@zelda-cli-dev/init": "file:../../commands/init",
+    "@zelda-cli-dev/exec": "file:../exec",
     "colors": "^1.4.0",
     "commander": "^7.0.0",
     "dotenv": "^8.2.0",
     "exists": "^1.0.1",
     "import-local": "^3.0.2",
-    "minimist": "^1.2.5",
     "root-check": "^1.0.0",
     "semver": "^7.3.4",
     "user-home": "^2.0.0"
