--- a/utils/utils/package.json
+++ b/utils/utils/package.json
@@ -5,7 +5,7 @@
   "author": "fantienan <363982607@qq.com>",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/utils.js",
+  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
