--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "zelda-cli-dev": "core/cli/bin/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node .\\core\\cli\\bin\\index.js init --targetPath D:\\study\\imooc\\web-front-end-architect\\code\\zelda-cli-dev\\commands\\init --debug"
+    "init": "node .\\core\\cli\\bin\\index.js init --debug",
+    "init:local": "zelda-cli-dev init --debug --targetPath .\\commands\\init --force test-project"
   },
   "keywords": [],
   "author": "",
