feature：添加脚手架模板功能

--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@zelda-cli-dev/package": "file:../../models/package",
-    "@zelda-cli-dev/log": "file:../../utils/log"
+    "@zelda-cli-dev/log": "file:../../utils/log",
+    "@zelda-cli-dev/utils": "file:../../utils/utils"
   }
 }
