--- a/commands/init/package.json
+++ b/commands/init/package.json
@@ -32,8 +32,11 @@
     "@zelda-cli-dev/package": "file:../../models/package",
     "@zelda-cli-dev/request": "file:../../utils/request",
     "@zelda-cli-dev/utils": "file:../../utils/utils",
+    "ejs": "^3.1.6",
     "fs-extra": "^9.1.0",
+    "glob": "^7.1.6",
     "inquirer": "^7.3.3",
+    "kebab-case": "^1.0.1",
     "semver": "^7.3.4",
     "user-home": "^2.0.0"
   }
